# gn_build

./: LICENSE  README.md
config/: BUILDCONFIG.gn
flags/: BUILD.gn
sanitizers/: BUILD.gn
scripts/: compdb.py  file_to_string_literal.py  flatc.py  run_command.py  test_runner.py  touch_stamp.py
templates/: compdb.gni  test_runner.gni
toolchain/gcc/: BUILD.gn
